// Copy this text, paste to https://dbdiagram.io/d
// Or, https://databasediagram.com/app
// Or, view in VSCode with extension: "DBML Live Preview"

Project DBML {
  Note: '''
Category: Represents product categories to which products belong.
Customer: Represents a customer with personal and contact information.
Department: Contains information about company departments.
Employee: Represents employees working in the organization.
EmployeeDepartment: Junction table for many-to-many relationship between employees and departments.
Inventory: Tracks product stocks in inventory.
Product: Contains information about products available for purchase.
Supplier: Represents suppliers who provide products.
Item: Represents individual line items within an order.
Order: Represents an order placed by a customer, including order details.
ProductCategory: Junction table for many-to-many relationship between products and categories.
SalesReport: Represents sales report data.
'''
}

Table Category {
    id INTEGER [primary key]
    name VARCHAR 
    }

Table Customer {
    id INTEGER [primary key]
    name VARCHAR 
    email VARCHAR 
    balance FLOAT 
    credit_limit FLOAT 
    }

Table Department {
    id INTEGER [primary key]
    name VARCHAR 
    }

Table Employee {
    id INTEGER [primary key]
    name VARCHAR 
    position VARCHAR 
    }

Table EmployeeDepartment {
    id INTEGER [primary key]
    employee_id INTEGER 
    department_id INTEGER 
    }

Table Inventory {
    id INTEGER [primary key]
    product_id INTEGER 
    supplier_id INTEGER 
    stock_quantity INTEGER 
    }

Table Product {
    id INTEGER [primary key]
    name VARCHAR 
    unit_price FLOAT 
    }

Table Supplier {
    id INTEGER [primary key]
    name VARCHAR 
    contact_email VARCHAR 
    }

Table Item {
    id INTEGER [primary key]
    order_id INTEGER 
    product_id INTEGER 
    quantity INTEGER 
    amount FLOAT 
    unit_price FLOAT 
    }

Table Order {
    id INTEGER [primary key]
    customer_id INTEGER 
    date_shipped DATETIME 
    amount_total FLOAT 
    }

Table ProductCategory {
    id INTEGER [primary key]
    product_id INTEGER 
    category_id INTEGER 
    }

Table SalesReport {
    id INTEGER [primary key]
    order_id INTEGER 
    report_date DATETIME 
    total_sales FLOAT 
    }



// Relationships
    Ref: EmployeeDepartment.(department_id) < Department.(id)
    Ref: EmployeeDepartment.(employee_id) < Employee.(id)
    Ref: Inventory.(product_id) < Product.(id)
    Ref: Inventory.(supplier_id) < Supplier.(id)
    Ref: Item.(order_id) < Order.(id)
    Ref: Item.(product_id) < Product.(id)
    Ref: Order.(customer_id) < Customer.(id)
    Ref: ProductCategory.(category_id) < Category.(id)
    Ref: ProductCategory.(product_id) < Product.(id)
    Ref: SalesReport.(order_id) < Order.(id)
